--- a/react-client/package.json
+++ b/react-client/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "svgr": "svgr --typescript -d src/atoms/Icons/components assets/icons"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +56,7 @@
     "@storybook/manager-webpack5": "^6.4.20",
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "0.0.9",
+    "@svgr/cli": "^6.2.1",
     "@types/styled-components": "^5.1.24",
     "babel-loader": "^8.2.4",
     "webpack": "^5.71.0"
