--- a/react-client/package.json
+++ b/react-client/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-popper": "^2.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
