feat: multi language

--- a/react-client/package.json
+++ b/react-client/package.json
@@ -11,8 +11,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "i18next": "^21.6.15",
+    "i18next-http-backend": "^1.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.3",
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
@@ -27,7 +30,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "svgr": "svgr --typescript -d src/atoms/Icons/components assets/icons"
+    "svgr": "svgr --typescript -d src/atoms/Icons/components src/assets/icons"
   },
   "eslintConfig": {
     "extends": [
