--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -12,14 +12,19 @@ greenlet==1.1.2
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
+joblib==1.1.0
 MarkupSafe==2.1.1
 marshmallow==3.15.0
 mysqlclient==2.1.0
+numpy==1.22.3
 packaging==21.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.8
+scikit-surprise==1.1.1
+scipy==1.8.0
 six==1.16.0
 SQLAlchemy==1.4.36
+surprise==0.1
 Werkzeug==2.1.1
 zipp==3.8.0
