--- a/react-client/package.json
+++ b/react-client/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "i18next": "^21.6.15",
     "i18next-http-backend": "^1.4.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
     "react-i18next": "^11.16.3",
