--- a/react-client/package.json
+++ b/react-client/package.json
@@ -16,6 +16,7 @@
     "i18next-http-backend": "^1.4.0",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.1.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
     "react-i18next": "^11.16.3",
@@ -65,6 +66,7 @@
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "0.0.9",
     "@svgr/cli": "^6.2.1",
+    "@types/react-datepicker": "^4.4.1",
     "@types/styled-components": "^5.1.24",
     "babel-loader": "^8.2.4",
     "webpack": "^5.71.0"
