--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -21,6 +21,7 @@ packaging==21.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.8
+python-dotenv==0.20.0
 scikit-surprise==1.1.1
 scipy==1.8.0
 six==1.16.0
