--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -9,6 +9,7 @@ Flask-JWT-Extended==4.3.1
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
