--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -19,6 +19,7 @@ marshmallow==3.15.0
 mysqlclient==2.1.0
 numpy==1.22.3
 packaging==21.3
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.8
