add origin to env

--- a/flask-server/.env sample
+++ b/flask-server/.env sample
@@ -1,3 +1,4 @@
 SECRET_KEY="hardsecretkey"
 SQLALCHEMY_DATABASE_URI="mysql://root:<password>@localhost/course_recommend?charset=utf8"
 SQLALCHEMY_TRACK_MODIFICATIONS=False
+ORIGINS="http://localhost:3000"
